force-app/main/default/objects/Override_Codes__c/Override_Codes__c.object-meta.xml
<CustomObject>
    <label>Override Code</label>
    <nameField>
        <label>Override Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Override Codes</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>