force-app/main/default/objects/Override_Codes__c/fields/HRCSVC_Override_Amount__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Override_Amount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Override Amount</label>
    <type>Checkbox</type>
</CustomField>