force-app/main/default/objects/Override_Codes__c/fields/HRCSVC_Override_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Override_Expiration_Date__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Override Expiration Date</label>
    <type>Checkbox</type>
</CustomField>