force-app/main/default/objects/Override_Codes__c/fields/HRCSVC_Override_Reason__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Override_Reason__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Override Reason</label>
    <type>Checkbox</type>
</CustomField>