force-app/main/default/objects/Override_Codes__c/fields/HRCSVC_Pricing_Unit_of_Measure__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Pricing_Unit_of_Measure__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pricing Unit of Measure</label>
    <type>Checkbox</type>
</CustomField>