force-app/main/default/objects/Override_Codes__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>HRCSVC_Override_Amount__c</columns>
    <columns>HRCSVC_Override_Effective_Date__c</columns>
    <columns>HRCSVC_Override_Expiration_Date__c</columns>
    <columns>HRCSVC_Override_Reason__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>